# discord_bot

./: .cz.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  birthday_bot.py  discord_bot.py  init_bot.py  lol_bot.py  pyproject.toml  requirements.txt  update_lol_users.py  utils.py  youtube_webhook.py
files/: birthday_messages.txt  birthday_register.txt
modules/: AudioFile.py  DataBase.py  MusicChannel.py  google_utils.py  music_utils.py  shazam_utils.py  spotify_utils.py  utils.py
modules/riot_tracker/: chore.py  client.py  lol_basher.py  message_templates.py  models.py  queues.py  storage.py
tests/: test_convert_mp3.py
